[package]
name = "hypertree"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/CKS-systems/manifest"
authors = ["Britt Cyr <britt@cks.systems>"]
description = "Data structures for Manifest"
license-file = "LICENSE"

[features]
colored = ["dep:colored"]
fuzz = []
trace = []
test = []

[dependencies]
bytemuck = { version = "1.4.0", features = ["derive"] }
solana-program = "1.16"
static_assertions = "1.1.0"

# Does not work with sbf. Enable when debugging red black only
colored = { version = "2.1.0", optional = true }